# classroom

AirConditionControl/: AirConditionControl.sln
AirConditionControl/AirConditionControl/: AirConditionControl.csproj  App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
AirConditionControl/AirConditionControl/BLL/: CMDDecodeBLL.cs  CMDEncodeBLL.cs
AirConditionControl/AirConditionControl/Model/: AirConditionStateModel.cs  CMD.cs  Control_Tabel.cs  Model1.Context.cs  Model1.Designer.cs  Model1.edmx  Model1.edmx.diagram  Set_Tabel.cs  StatusWater.cs  Status_Tabel.cs
AirConditionControl/AirConditionControl/Properties/: AssemblyInfo.cs
GateWay/: CMakeLists.txt  README.md  appconfig.conf  startGevent.py  startPost.py  startWSGI.py
GateWay/Helper/: ConfigHelper.py  JsonHelper.py  LogHelper.py
GateWay/PostConduct/: PostBLL.py
GateWay/WSGI/: WSGIBLL.py  WSGIIni.py
classroom/: pom.xml
classroom/src/main/resources/: application.properties
classroom_smart/: .eslintrc.js  README.md  package-lock.json  package.json
classroom_smart/public/: index.html
classroom_smart/src/: main.js  router.js
classroom_smart/src/assets/css/: index.css
classroom_smart/src/components/User/: AirPage.vue  Analysis.vue  DailyRecord.vue  DiscPeople.vue  Header.vue  Home.vue  HomeList.vue  HomePage.vue  pduPage.vue
classroom_smart/src/http/: api.js  config.js  index.js  interface.js
classroom_smart/src/store/: getters.js  mutation-types.js  mutations.js  state.js
classroom_smart/src/views/: Home.vue  Login.vue
(+172 files in other folders)
